updated API Key

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.servlet.multipart.max-request-size=10MB
 # Google Gemini API configuration
 # Replace with your actual Gemini API key
 # Get your API key from: https://makersuite.google.com/app/apikey
-gemini.api.key=AIzaSyDNsLI_yk8XDR1BoDf-MdiHHrkJ1KXyno8
+gemini.api.key=
 gemini.model=gemini-2.5-flash
 gemini.max-tokens=8192
 gemini.temperature=0.4
