--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Google Gemini API configuration
-# Replace with your actual Gemini API key here gemini.api.key
+# Replace with your actual Gemini API key
 # Get your API key from: https://makersuite.google.com/app/apikey
 gemini.api.key=
 gemini.model=gemini-2.5-flash
